--- a/2. Build a Google.com clone/7. Inline vs block elements/styles.css
+++ b/2. Build a Google.com clone/7. Inline vs block elements/styles.css
@@ -5,8 +5,10 @@ Turn the elements into blocks!
 
 img {
     width: 300px;
+    display: block;
 }
 
 input {
+    display: block;
     width: 400px;
 }
