Completed 9th and 10th ex chap 2 lol

--- a/2. Build a Google.com clone/9. Divs rule the world/styles.css
+++ b/2. Build a Google.com clone/9. Divs rule the world/styles.css
@@ -1,5 +1,4 @@
 img {
-    margin-top: 100px;
     display: block;
     width: 300px;
 }
@@ -7,4 +6,8 @@ img {
 input {
     display: block;
     width: 400px;
+}
+
+.main {
+    margin-top: 100px;
 }
