--- a/2. Build a Google.com clone/14. Centering our content/styles.css
+++ b/2. Build a Google.com clone/14. Centering our content/styles.css
@@ -4,6 +4,7 @@ Challenge:
 Center the logo and the search field.
 */
 .main {
+    display: block;
     margin-top: 100px;    
 }
 
@@ -11,9 +12,13 @@ Center the logo and the search field.
     display: block;
     width: 300px;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .search-input {
     display: block;
     width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
