--- a/2. Build a Google.com clone/15. Aside - padding/styles.css
+++ b/2. Build a Google.com clone/15. Aside - padding/styles.css
@@ -1,3 +1,10 @@
 .card {
     color: #222222;
+    background: lightgrey;
+    width: 300px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    border-radius: 5px;
 }
