--- a/2. Build a Google.com clone/23. Centering both buttons with flexbox/styles.css
+++ b/2. Build a Google.com clone/23. Centering both buttons with flexbox/styles.css
@@ -31,9 +31,8 @@ Give the div a "btn-wrapper" class.
 }
 
 .btn {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 30px;
     background: #dfe1e5;
     border: none;
@@ -43,4 +42,8 @@ Give the div a "btn-wrapper" class.
     padding-right: 16px;
     border-radius: 4px;
     font-size: 14px;
+}
+.btn-wrap {
+    display: flex;
+    justify-content: center;
 }
